@@ -3,6 +3,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.13  2004/05/10 21:16:11  jimmyo
+# Allow/deny in munin-node can now be configured per plugin, in addition to "globally" for the whole node.
+#
 # Revision 1.12  2004/04/27 21:18:33  jimmyo
 # Fixed a problem in the node when running as a non-root user and using sudo to run the plugins (Deb#236694).
 #
@@ -106,6 +109,7 @@ my $paranoia= 0;
 my @ignores = ();
 my %sconf   = ();
 my $timeout = 10;
+my $caddr   = "";
 
 $do_usage=1  unless 
 GetOptions ( "config=s"     => \$conffile,
@@ -315,8 +319,43 @@ sub print_service {
 
 sub list_services {
     my $node = $_[0] || $FQDN;
-    print join " ", keys %{$nodes{$node}};
+    print join " ", grep { &has_access ($_); } keys %{$nodes{$node}};
+    #print join " ", keys %{$nodes{$node}};
     print "\n";
+}
+
+sub has_access {
+	my $serv = shift;
+	my $host = $caddr;
+
+	unless (defined $sconf{$serv}{'allow_deny'})
+	{
+		return 1;
+	}
+	print STDERR "DEBUG: Checking access: $host;$serv;\n" if $DEBUG;
+	foreach my $rule (@{$sconf{$serv}{'allow_deny'}})
+	{
+#		if ($rule->[1] =~ /\//)
+#		{ # CIDR
+#			print "DEBUG: CIDR $host;$serv;$rule->[1];\n";
+#			return 1;
+#		}
+#		else
+#		{ # regex
+			if ($host =~ m($rule->[1]))
+			{
+				if ($rule->[0] eq "allow")
+				{
+					return 1;
+				}
+				else
+				{
+					return 0;
+				}
+			}
+#		}
+	}
+	return 1;
 }
 
 sub logger {
@@ -346,7 +385,7 @@ sub run_service {
   $command ||="";
   my @lines = ();;
   my $timed_out = 0;
-  if ($services{$service}) {
+  if ($services{$service} and ($caddr eq "" or &has_access ($service))) {
     my $child = 0;
 
     if ($child = open (CHILD, "-|")) {
@@ -480,6 +519,7 @@ sub run_service {
 
 sub process_request {
   my $self = shift;
+  $caddr = $self->{server}->{peeraddr};
   print "# munin node at $FQDN\n";
   local $SIG{ALRM} = sub { logger ("Connection timed out."); die "timeout" };
   alarm($timeout);
@@ -615,6 +655,11 @@ sub load_auth_file
 	elsif (/^\s*host_name\s+(.+)\s*$/)
 	{
 	    $sconf->{$service}{'host_name'} = $1;
+	}
+	elsif (/^\s*(allow)\s+(.+)\s*$/ or /^\s*(deny)\s+(.+)\s*$/)
+	{
+	    push (@{$sconf->{$service}{'allow_deny'}}, [$1, $2]);
+		print STDERR "DEBUG: Pushing allow_deny: $1, $2\n" if $DEBUG;
 	}
 	elsif (/^\s*env\s+([^=\s]+)\s*=\s*(.+)$/)
 	{
