@@ -1,3 +1,8 @@
+munin (1.1.1)
+
+  * Allow/deny in munin-node can now be configured per plugin, in addition
+    to "globally" for the whole node.
+
 munin (1.0.0pre4)
 
   * Munin-update now properly ignores node with "update no".
